--- a/main.css
+++ b/main.css
@@ -1,1 +1,1 @@
-body{background:#f5f5f5}/*# sourceMappingURL=main.css.map */
+:root{font-family:Inter,sans-serif;font-feature-settings:"liga" 1,"calt" 1}@supports(font-variation-settings: normal){:root{font-family:InterVariable,sans-serif}}body{background:#f5f5f5}/*# sourceMappingURL=main.css.map */
