Updated styling folder structure and organization.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
+@use "base/_variables";
+@use "components/_buttons";
+
 :root {
   font-family: Inter, sans-serif;
   font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
