Changed color pallete to catppuccin mocha.

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-:root{font-family:Inter,sans-serif;font-feature-settings:"liga" 1,"calt" 1}@supports(font-variation-settings: normal){:root{font-family:InterVariable,sans-serif}}body{background:#d3d3d3}/*# sourceMappingURL=main.css.map */
+:root{font-family:Inter,sans-serif;font-feature-settings:"liga" 1,"calt" 1;color:#cdd6f4}@supports(font-variation-settings: normal){:root{font-family:InterVariable,sans-serif}}body{background:#1e1e2e}/*# sourceMappingURL=main.css.map */
