Scroll spy now works. Also changed the style for the active section and added a hover effect.

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -36,3 +36,10 @@ $warning: $peach;
 $error: $red;
 $success: $green;
 $info: $sapphire;
+
+$section-gap: 15em;
+$nav-link-font-size: 2.5em;
+$nav-link-padding: 0.5em;
+$paragraph-skip: 1em;
+$card-padding: 2em;
+$border-radius: 2em;
