Made the website responsive.

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -43,3 +43,5 @@ $nav-link-padding: 0.5em;
 $paragraph-skip: 1em;
 $card-padding: 2em;
 $border-radius: 2em;
+
+$mobile-breakpoint: 768px; // Adjust as needed
