Made it so that navigation panel isn't covered by browser phone UI.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -249,7 +249,7 @@ a {
         left: 0;
         width: 85%;
         max-width: 300px;
-        height: 100vh;
+        height: 100svh;
         background: variables.$base;
         border-right: 1px solid variables.$surface1;
         transform: translateX(-100%);
