--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,7 +37,7 @@ a {
 
 .container {
     display: flex;
-    min-height: 100svh;
+    min-height: 100dvh;
 }
 
 
@@ -118,7 +118,7 @@ a {
     display: flex;
     flex: 1;
     max-width: 320px;
-    height: 100svh;
+    height: 100dvh;
     justify-content: center;
     overflow-y: auto;
     overflow-x: hidden;
@@ -159,7 +159,7 @@ a {
     flex: 2;
     flex-direction: column;
     gap: variables.$section-gap;
-    max-height: 100svh;
+    height: 100dvh;
     overflow: auto;
 
     padding: 2em variables.$card-padding;
@@ -249,7 +249,7 @@ a {
         left: 0;
         width: 85%;
         max-width: 300px;
-        height: 100svh;
+        height: 100dvh;
         background: variables.$base;
         border-right: 1px solid variables.$surface1;
         transform: translateX(-100%);
@@ -305,7 +305,6 @@ a {
         flex: 1;
         width: 100%;
         padding: 1.5em 15px;
-
     }
 
     .introduction-content-container {
